@@ -1,5 +1,6 @@
 2 June 2016: Wouter
 	- Fix libubound for edns optlist feature.
+	- Fix distinction between free and CRYPTO_free in dsa and ecdsa alloc.
 
 31 May 2016: Wouter
 	- Fix windows service to be created run with limited rights, as a
